adds modules to JavaDoc