@@ -326,6 +326,12 @@
 						<source>${java.version}</source>
 						<keywords>true</keywords>
 						<serialwarn>true</serialwarn>
+						<additionalOptions>
+							<additionalOption>--module-path</additionalOption>
+							<additionalOption>${javadoc.module.path}</additionalOption>
+							<additionalOption>--add-modules</additionalOption>
+							<additionalOption>ALL-MODULE-PATH</additionalOption>
+						</additionalOptions>
 						<links>
 							<link>${jetbrains-annotations.javadoc.url}</link>
 							<link>${jcip-annotations.javadoc.url}</link>
@@ -343,6 +349,22 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>build-helper-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>javadoc-modulepath</id>
+						<phase>generate-sources</phase>
+						<goals>
+							<goal>build-classpath</goal>
+						</goals>
+						<configuration>
+							<includeScope>provided</includeScope>
+							<outputProperty>javadoc.module.path</outputProperty>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
